<resources>
    <string name="app_name">Text Bomb</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="textAmount">Amount of texts</string>
    <string name="buttonSend">send</string>
    <string name="messageToSend">Message to send</string>
    <string name="editTextStopMessage">Defusal Message</string>
    <string name="buttonStop">Stop</string>
    <string name="delayLength">Delay: 0 seconds</string>
    <string name="banner_ad_unit_id">ca-app-pub-1592176704950004/4837428711</string>

    <string-array name="sendMessageChoice">
        <item>Custom</item>
        <item>Cat Facts</item>
        <item>Dog Facts</item>
        <item>Cow Facts</item>
        <item>Jellyfish Facts</item>
        <item>Sloth Facts</item>
    </string-array>
</resources>
